<resources>
    <string name="app_name">设邦圈</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="batter_design">优设计</string>
    <string name="small_course">微课堂</string>
    <string name="works_wall">作品墙</string>
    <string name="home">首页</string>
    <string name="todo">TODO</string>
    <string name="search">Search</string>
    <string name="edit">编辑</string>
    <string name="user_00000">用户00000</string>
    <string name="my_course">我的课堂</string>
    <string name="my_works">我的作品</string>
    <string name="my_comment">我的评论</string>
    <string name="textview">TextView</string>
    <string name="user_no_login">用户未登录</string>
    <string name="login">登录</string>
    <string name="input_password">请输入密码</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="sign_up">注册</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="input_auth_code">请输入验证码</string>
    <string name="input_name">请输入昵称</string>
    <string name="input_new_email">请输入新邮箱的地址</string>
    <string name="input_old_phone_auth_code">请输入现手机验证码</string>
    <string name="input_new_phone">请输入新手机号</string>
    <string name="input_old_password">输入您的旧密码</string>
    <string name="input_new_password">输入您的新密码</string>
    <string name="input_new_password_again">再次输入您的新密码</string>
    <string name="followed">已关注</string>
    <string name="not_followed">未关注</string>
    <string name="add_img">添加图片</string>
    <string name="upload">上传作品</string>

    <item name="layout_main_home_recycler_item_recycler_item_key" type="id" />
</resources>
