<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/config_color_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="157.5dp">

            <TextView
                android:id="@+id/tv_main_personal_center_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/edit" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/iv_main_personal_center_user_icon"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_user_default"/>

                <TextView
                    android:id="@+id/iv_main_personal_center_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:text="@string/user_no_login"
                    android:textColor="@color/config_color_black"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:weightSum="3">

            <TextView
                android:id="@+id/tv_main_personal_center_my_course"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/layer_main_personal_center_bg"
                android:text="@string/my_course"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_main_personal_center_my_works"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/layer_main_personal_center_my_works_bg"
                android:text="@string/my_works"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_main_personal_center_my_comment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/layer_main_personal_center_bg"
                android:text="@string/my_comment"
                android:textSize="14sp" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_main_personal_center_tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="11"
            tools:listitem="@layout/layout_main_personal_center_recycler_item" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>