<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_old_password_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">

        <EditText
            android:id="@+id/user_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_old_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_new_password_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">

        <EditText
            android:id="@+id/user_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_new_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_new_password_info_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">

        <EditText
            android:id="@+id/user_new_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_new_password_again"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>