<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_email_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">

        <EditText
            android:id="@+id/new_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_new_email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/auth_code_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/get_auth_code"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">

            <EditText
                android:id="@+id/auth_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_auth_code"
                android:inputType="number" />


        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/get_auth_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:text="@string/get_auth_code" />

    </RelativeLayout>

</LinearLayout>