<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_all_toolbar_title" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="48dp"
                android:paddingTop="48dp"
                android:paddingEnd="48dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/user_icon"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_user_default" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_phone_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">

                    <EditText
                        android:id="@+id/user_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_phone_number"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_password_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">

                    <EditText
                        android:id="@+id/user_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_password_info_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">

                    <EditText
                        android:id="@+id/user_password_again"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_password_again"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/user_auth_code_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@id/get_auth_code"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp">

                        <EditText
                            android:id="@+id/user_auth_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/input_auth_code"
                            android:inputType="number" />


                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:text="@string/get_auth_code"
                        android:id="@+id/get_auth_code"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>

                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/sign_up" />

                <TextView
                    android:id="@+id/start_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="24dp"
                    android:text="已经拥有账号？点此登陆" />
            </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>