<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include layout="@layout/layout_all_toolbar_title" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="48dp"
            android:paddingTop="48dp"
            android:paddingEnd="48dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/user_icon"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_user_default" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_account_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">

                    <EditText
                        android:id="@+id/user_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_phone_number"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_password_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">

                    <EditText
                        android:id="@+id/user_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:text="@string/login" />

                <TextView
                    android:id="@+id/start_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:text="还没有账号？点此创建" />


            </LinearLayout>


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>